--- a/pmualaba.yml
+++ b/pmualaba.yml
@@ -3,11 +3,11 @@
   connection: local
 
   roles:
-    - pmualaba.superlumic-osx-defaults
-    - pmualaba.superlumic-homebrew
-    - pmualaba.superlumic-cli
-    - pmualaba.superlumic-computername
-    - pmualaba.superlumic-vim
+    - roderik.superlumic-osx-defaults
+    - roderik.superlumic-homebrew
+    - roderik.superlumic-cli
+    - roderik.superlumic-computername
+    - roderik.superlumic-vim
     
   tasks:
     - name: add a shortcut for archive in mail
